<resources>
    <string name="app_name">MovieClean</string>
    <string name="popular_movies">Movies Popular</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="error_has_ocurred">Un error ha ocurrido</string>
    <string name="detail_movie">Movie detalle</string>

    <string name="action_code">Show</string>
    <string name="action_blog">Read</string>



    <string name="titulo" translatable="false">TÍTULO</string>
    <string name="descripcion" translatable="false">DESCRIPCIÓN</string>
    <string name="vote_count" translatable="false">VOTE</string>
    <string name="popularity" translatable="false">POPULARITY</string>
    <string name="vote_average" translatable="false">AVERAGE</string>
    <string name="estreno" translatable="false">ESTRENO</string>
    <!-- FOLDING CELL -->

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">LEER MÁS</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
