<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:visibility="gone"
    >

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop" />
        <!-- android:src="@drawable/head_image" -->

        <TextView
            android:id="@+id/tv_popularity2"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_imagen"
            android:layout_alignLeft="@id/iv_imagen"
            android:layout_alignStart="@id/iv_imagen"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/requests_count_mock" />

        <TextView
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_popularity2"
            android:layout_alignLeft="@id/tv_popularity2"
            android:layout_alignStart="@id/tv_popularity2"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/popularity" />

        <TextView
            android:id="@+id/tv_vote_count2"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_imagen"
            android:layout_alignEnd="@id/iv_imagen"
            android:layout_alignRight="@id/iv_imagen"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="@string/weight_mock" />

        <TextView
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_vote_count2"
            android:layout_alignLeft="@id/tv_vote_count2"
            android:layout_alignStart="@id/tv_vote_count2"
            android:text="@string/vote_count" />

        <TextView
            android:id="@+id/tv_vote_average2"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_imagen"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/pledge_mock" />

        <TextView
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_vote_average2"
            android:layout_alignLeft="@id/tv_vote_average2"
            android:layout_alignStart="@id/tv_vote_average2"
            android:text="@string/vote_average" />


    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_titulo"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/titulo" />

            <TextView
                android:id="@+id/tv_titulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_titulo"
                android:layout_alignStart="@id/tv_titulo"
                android:layout_below="@id/tv_titulo"
                android:text="@string/content_from1_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow" />

        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:textSize="18sp"
                    android:maxLines="7"
                    android:ellipsize="end"
                    tools:text="Thor is imprisoned on the other side of the universe and finds himself in a race against time to get back to Asgard to stop Ragnarok, the prophecy of destruction to his homeworld and the end of Asgardian civilization, at the hands of an all-powerful new threat, the ruthless Hela."/>

            </RelativeLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_delivery_date_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/estreno" />

                <TextView
                    android:id="@+id/text_releaseDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_delivery_date_badge"
                    android:layout_alignStart="@id/content_delivery_date_badge"
                    android:layout_below="@id/content_delivery_date_badge"
                    android:text="@string/delivery_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/content_leermas_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/btnRequest"
            android:padding="10dp"
            android:text="@string/request_btn_text"
            android:textAlignment="center"
            android:textColor="@color/bgContent"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>