<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".platform.view.activity.MovieDetail"
    tools:showIn="@layout/activity_movie_detail"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="sdfds sdf dsf sd"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgTitleRight"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingStart="15dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/tv_popularity"
                style="@style/TitleBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_popularity_detail"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="2532"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tv_popularity_detail"
                style="@style/TitleBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_popularity"
                android:layout_alignStart="@id/tv_popularity"
                android:text="@string/popularity" />

            <TextView
                android:id="@+id/tv_vote_count"
                style="@style/TitleBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_popularity_detail"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="855" />

            <TextView
                android:id="@+id/tv_votecount_detail"
                style="@style/TitleBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_vote_count"
                android:layout_alignStart="@id/tv_vote_count"
                android:text="@string/vote_count" />

            <TextView
                android:id="@+id/tv_vote_average"
                style="@style/TitleBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_text_average_detail"
                android:layout_alignParentBottom="true"
                android:text="4.5"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tv_text_average_detail"
                style="@style/TitleBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_vote_average"
                android:layout_alignStart="@id/tv_vote_average"
                android:text="@string/vote_average" />

        </RelativeLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <include layout="@layout/cell_content_body" />

        </LinearLayout>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingStart="15dp"
            android:paddingTop="20dp">

            <TextView
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/descripcion" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_voteAverage"
                android:layout_marginTop="@dimen/default_margin"
                android:textSize="18sp"
                android:lineSpacingExtra="1dp"
                tools:text="Thor is imprisoned on the other side of the universe and finds himself in a race against time to get back to Asgard to stop Ragnarok, the prophecy of destruction to his homeworld and the end of Asgardian civilization, at the hands of an all-powerful new threat, the ruthless Hela."/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingStart="15dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/content_delivery_date_badge_detail"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/estreno" />

            <TextView
                android:id="@+id/text_releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/content_delivery_date_badge_detail"
                android:layout_alignStart="@id/content_delivery_date_badge_detail"
                android:layout_below="@id/content_delivery_date_badge_detail"
                android:text="@string/delivery_time_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
